update configs, scripts

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -15,12 +15,12 @@ height = 28
 cursor-click = pointer
 cursor-scroll = pointer
 
-offset-y = 0.5%
-offset-x = 0.6%
+;offset-y = 0.5%
+;offset-x = 0.6%
 
 fixed-center = true
 
-border-top-size = 4
+border-top-size = 3
 border-bottom-size = 0
 border-color = ${colors.transparent}
 
@@ -32,26 +32,21 @@ padding-right = 2
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = "Iosevka Nerd Font:size=14;3"
-font-1 = "SauceCodePro Nerd Font Mono:size=9;9"
-font-2 = "Material Design Icons:pixelsize=13;2"
-font-3 = "Sinji:pixelsize=12;5"
-font-4 = "Togalite medium:pixelsize=11;0"
-font-5 = "SauceCodePro Nerd Font Mono:size=16;0"
-font-6 = "JetBrainsMono Nerd Font Mono:size=12;0"
-font-7 = "JetBrainsMono Nerd Font:pixelsize=12;0"
-font-8 = "JetBrainsMono Nerd Font:pixelsize=17;4"
-font-9 = "Hack Nerd Font:pixelsize=12;0"
-font-10 = "MesloLGS NF:size=12;0"
-font-11 = "FiraCode Nerd Font:size=12;0"
-font-12 = "Font Awesome 5 Free:pixelsize=14;0"
-font-13 = "Font Awesome 5 Brands:pixelsize=14;0"
-font-14 = "Font Awesome 5 Free Solid:pixelsize=14;0"
+; font for text
+font-0 = "Iosevka NF:size=14;3"
+; font for icons
+font-1 = "JetBrainsMono NF:pixelsize=17;4"
+; font for space
+font-2 = "SauceCodePro Nerd Font Mono:size=8;1"
+; font for appmenu
+font-3 = "Iosevka NF:size=18;5"
+; font for workspaces
+font-4 = "Iosevka NF:size=15;5"
 
 ; MODULES SETUP
-;modules-left = appmenu space line space start cspace kernel-name double-cspace packages-count cspace end space start cspace gmail-sontungexpt cspace double-cspace gmail-school cspace end space start volume end
+; modules-left = appmenu space line space start cspace kernel-name double-cspace packages-count cspace end space start cspace gmail-sontungexpt cspace double-cspace gmail-school cspace end space start volume end
 modules-left = appmenu space line space workspaces space line space start cspace kernel-name double-cspace packages-count cspace end space start cspace network cspace end space start volume end
-# modules-center =
+; modules-center =
 modules-right = start cspace backlight double-cspace fs-root double-cspace memory double-cspace cpu cspace end space start cspace date cspace end space start cspace battery cspace end
 
 
