--- a/.config/polybar/modules/ibus.ini
+++ b/.config/polybar/modules/ibus.ini
@@ -4,7 +4,7 @@ exec = ~/.config/polybar/scripts/ibus.sh
 click-left = /home/stilux/.config/polybar/scripts/ibus.sh toggle
 interval = 3
 label = "%output%"
-# format-prefix= "󰌌 "
+; format-prefix= "󰌌 "
 format-background = ${colors.surface0}
 format-foreground = ${colors.teal}
-format-font = 0
+format-font = 1
