--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -59,7 +59,7 @@ mount-0 = /home/stilux/Data
 [module/powermenu]
 type = custom/text
 content = ""
-content-font = 9
+content-font = 2
 ; content-background = ${colors.surface0}
 content-foreground = ${colors.red}
 click-left = ~/.config/polybar/scripts/powermenu.sh
@@ -73,7 +73,7 @@ label = "%output%"
 click-left = xdg-open https://github.com/sontungexpt/stilux-dotfiles
 click-right = xdg-open https://github.com/sontungexpt/stinvim
 click-middle = xdg-open https://github.com/sontungexpt
-format-prefix = "  "
+format-prefix = "󰚩  "
 format-background = ${colors.surface0}
 format-foreground = ${colors.pink-custom}
 format-font = 1
