--- a/.config/polybar/modules/app-menu.ini
+++ b/.config/polybar/modules/app-menu.ini
@@ -1,6 +1,6 @@
 [module/appmenu]
 type = custom/text
 content-foreground = ${colors.sky}
-content = " "
-content-font = 9
+content = "󰣇 "
+content-font = 4
 click-left = rofi -show drun
