update configs, scripts

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -15,8 +15,8 @@ height = 28
 cursor-click = pointer
 cursor-scroll = pointer
 
-;offset-y = 0.5%
-;offset-x = 0.6%
+; offset-y = 0.5%
+; offset-x = 0.6%
 
 fixed-center = true
 
@@ -54,7 +54,7 @@ line-size =2
 
 wm-name = i3
 override-redirect = false
-; tray-position = left
+; tray-position = center
 wm-restack = i3
 ; monitor-fallback =
 ; locale =
