--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,7 +20,7 @@ cursor-scroll = pointer
 
 fixed-center = true
 
-border-top-size = 3
+border-top-size = 2
 border-bottom-size = 0
 border-color = ${colors.transparent}
 
@@ -33,11 +33,11 @@ module-margin-left = 0
 module-margin-right = 0
 
 ; font for text
-font-0 = "Iosevka NF:size=14;3"
+font-0 = "Iosevka NF:size=14;4"
 ; font for icons
-font-1 = "JetBrainsMono NF:pixelsize=17;4"
+font-1 = "Iosevka NF:pixelsize=17;4"
 ; font for space
-font-2 = "SauceCodePro Nerd Font Mono:size=8;1"
+font-2 = "SauceCodePro Nerd Font Mono:size=8:0"
 ; font for appmenu
 font-3 = "Iosevka NF:size=18;5"
 ; font for workspaces
