add yazi config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,12 +10,14 @@ adjust_column_width 0
 disable_ligatures never
 
 # Cursor
-cursor  #a7ccff
-cursor_text_color #FFFFFF
+cursor  #7aa1d6
+cursor_text_color #7aa1d6
 # cursor_shape block
 
 #Color scheme
-background #24283b
+# background #24283b
+background #161f31
+# background #d8e0f3
 background_opacity 1
 dynamic_background_opacity yes
 
