add wpa2 script

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -216,6 +216,7 @@ bindsym $mod+minus  scratchpad show
 # Ibus
 # Auto start ibus
 exec_always --no-startup-id ibus-daemon -drx
+exec_always --no-startup-id ibus engine Bamboo
 # exec_always ibus restart
 
 # Keyboard Layout
