--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -49,7 +49,7 @@ reveal = [
   { run = '''exiftool "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show EXIF", for = "unix" },
 ]
 extract = [
-  { run = '$HOME/.config/yazi/shell/extract.sh "$1"', desc = "Extract here", for = "unix" },
+  { run = 'unar "$1"', desc = "Extract here", for = "unix" },
   { run = 'unar "%1"', desc = "Extract here", for = "windows" },
 ]
 play = [
